--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -89,7 +89,7 @@
   background: {{ block.style.base.selection_bg_color }};
 }
 #{{block_id}} {
-  padding-top: {{ block.style.block.padding_top }}px;
-  padding-bottom: {{ block.style.block.padding_bottom }}px;
+  padding-top: {{ block.style.base.padding_top }}px;
+  padding-bottom: {{ block.style.base.padding_bottom }}px;
 }
 </style>
