--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -10,7 +10,7 @@
             target="_blank"
           {% endif %}
           data-field-string="items[{{loop.index0}}].url"
-          data-field-string-format-uri="items[{{loop.index0}}].link"
+          data-field-string-format-uri="items[{{loop.index0}}].url"
           data-placement="bottom"
         >
         	<img src="{{ client.logo }}" class="img-responsive img-centered" alt="">
