--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -9,15 +9,15 @@
           {% if item.open_in_new_page %}
             target="_blank"
           {% endif %}
+          data-field-string-file="items[{{loop.index0}}].logo"
           data-field-string-format-uri="items[{{loop.index0}}].url"
           data-placement="bottom"
         >
         	<img
             src="{{ client.logo }}"
             class="img-responsive img-centered"
-            data-field-string-file="items[{{loop.index0}}].logo"
-            no-data-placement="top"
-            no-data-inset="true"
+            ata-placement="top"
+            ata-inset="true"
             alt="{{ item.title }}"
           />      
         </a>
