--- a/templates/blocks/portfolio.html
+++ b/templates/blocks/portfolio.html
@@ -306,3 +306,17 @@
   background: {{ block.style.base.selection_bg_color }};
 }
 </style>
+
+<script>
+  // Add klar-modal-open class when modal is opened
+  $('.modal').on('show.bs.modal', function (event) {
+    console.log('add klar-open')
+    var modal = this;
+    modal.classList.add('klar-modal-open');
+  });
+  $('.modal').on('hide.bs.modal', function (event) {
+    console.log('remove klar-open')
+    var modal = this;
+    modal.classList.remove('klar-modal-open');
+  });
+</script>
