--- a/templates/page.html
+++ b/templates/page.html
@@ -313,12 +313,12 @@
     });
 
     // Add klar-modal-open class when modal is opened
-    $('body .modal').on('show.bs.modal', function (event) {
+    $('html .modal').on('show.bs.modal', function (event) {
       console.log('add klar-open')
       var modal = this;
       modal.classList.add('klar-modal-open');
     });
-    $('body .modal').on('hide.bs.modal', function (event) {
+    $('html .modal').on('hide.bs.modal', function (event) {
       console.log('remove klar-open')
       var modal = this;
       modal.classList.remove('klar-modal-open');
