--- a/templates/page.html
+++ b/templates/page.html
@@ -275,6 +275,22 @@
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
+<script>
+  function klarScript () {
+    // Add klar-modal-open class when modal is opened
+    $('.modal').on('show.bs.modal', function (event) {
+      console.log('add klar-open')
+      var modal = this;
+      modal.classList.add('klar-modal-open');
+    });
+    $('.modal').on('hide.bs.modal', function (event) {
+      console.log('remove klar-open')
+      var modal = this;
+      modal.classList.remove('klar-modal-open');
+    });
+  }
+</script>
+
 <!-- Theme JavaScript -->
 <script>
   // Agency Theme JavaScript
@@ -310,18 +326,6 @@
       offset: {
         top: 100
       }
-    });
-
-    // Add klar-modal-open class when modal is opened
-    $('html .modal').on('show.bs.modal', function (event) {
-      console.log('add klar-open')
-      var modal = this;
-      modal.classList.add('klar-modal-open');
-    });
-    $('html .modal').on('hide.bs.modal', function (event) {
-      console.log('remove klar-open')
-      var modal = this;
-      modal.classList.remove('klar-modal-open');
     });
   })(jQuery);
 </script>
