--- a/templates/page.html
+++ b/templates/page.html
@@ -277,7 +277,7 @@
 
 <script>
   function klarScript () {
-    // Add klar-modal-open class when modal is opened
+    // Add 'klar-modal-open' CSS class, when modal is opened
     $('.modal').on('show.bs.modal', function (event) {
       var modal = this;
       modal.classList.add('klar-modal-open');
