--- a/templates/page.html
+++ b/templates/page.html
@@ -264,7 +264,10 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
-<!-- content -->
+<div class="full"><!-- content --></div>
+<div class="left"><!-- content 1 --></div>
+<div class="right"><!-- content 2 --></div>
+
 
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
