--- a/templates/page.html
+++ b/templates/page.html
@@ -264,9 +264,9 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
-<div class="full"><!-- content --></div>
-<div class="left"><!-- content 1 --></div>
-<div class="right"><!-- content 2 --></div>
+<div class="full"><!-- klar_content --></div>
+<div class="left"><!-- klar_content 1 --></div>
+<div class="right"><!-- klar_content 2 --></div>
 
 
 <!-- jQuery -->
