--- a/templates/page.html
+++ b/templates/page.html
@@ -265,8 +265,8 @@
 </head>
 <body id="page-top" class="index">
 <div class="full"><!-- klar_content --></div>
-<div class="left"><!-- klar_content 1 --></div>
-<div class="right"><!-- klar_content 2 --></div>
+<div class="left"><!-- klar_content_left --></div>
+<div class="right"><!-- klar_content_right --></div>
 
 
 <!-- jQuery -->
