--- a/templates/page.html
+++ b/templates/page.html
@@ -264,10 +264,10 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
+<div class="left"><!-- klar_content_full --></div>
+<div class="left"><!-- klar_content_aside --></div>
+<div class="right"><!-- klar_content_main --></div>
 <div class="full"><!-- klar_content --></div>
-<div class="left"><!-- klar_content_left --></div>
-<div class="right"><!-- klar_content_right --></div>
-
 
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
