--- a/templates/page.html
+++ b/templates/page.html
@@ -8,6 +8,9 @@
   <meta name="author" content="">
   
   <title>{{ page.data.title }}</title>
+  <!-- Test with React Klar blocks -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   
   <!-- Bootstrap Core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
