--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -183,4 +183,4 @@ const data = {
     }
 };
 
-ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".team2"));
+// ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".team2"));
