--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -183,5 +183,8 @@ const data = {
         }
     }
 };
-ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".left"));
+
+function runReact() {
+  ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".left"));
+}
 </script>
