--- a/templates/page.html
+++ b/templates/page.html
@@ -281,6 +281,7 @@
 <!-- Test with React Klar blocks -->
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.1/cjs/react-dom-server.browser.development.min.js"></script>
 
 <script id="react-code"></script>
 
