--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,3 @@
-<script>
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
@@ -184,7 +183,7 @@ const data = {
     }
 };
 
-function runReact() {
-  ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".left"));
-}
-</script>
+// function runReact() {
+//   ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".left"));
+// }
+
