--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,3 +1,4 @@
+<script>
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
@@ -186,4 +187,6 @@ const data = {
 // function runReact() {
 //   ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".left"));
 // }
+
+</script>
 
