--- a/templates/page.html
+++ b/templates/page.html
@@ -282,9 +282,7 @@
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-<script id="react-code">
-  
-</script>
+<script id="react-code"></script>
 
 <script>
   function klarScript() {
