--- a/templates/page.html
+++ b/templates/page.html
@@ -282,7 +282,17 @@
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-<script id="react-code"></script>
+<script id="react-code">
+  function KlarBlock({heading, subHeading, image, team, text}) {
+    return (
+      <Block>
+        <Intro heading={heading} subHeading={subHeading} />
+        <Members team={team} foo="dfsadf" />
+        <Description text={text} />
+      </Block>
+    );
+  }
+</script>
 
 <script>
   function klarScript() {
