--- a/templates/page.html
+++ b/templates/page.html
@@ -284,13 +284,7 @@
 
 <script id="react-code">
   function KlarBlock({heading, subHeading, image, team, text}) {
-    return (
-      <Block>
-        <Intro heading={heading} subHeading={subHeading} />
-        <Members team={team} foo="dfsadf" />
-        <Description text={text} />
-      </Block>
-    );
+    return 'test';
   }
 </script>
 
