--- a/templates/page.html
+++ b/templates/page.html
@@ -283,19 +283,19 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
 <script id="react-code">
-  function KlarBlock({heading, subHeading, image, team, text}) {
-    return 'test'(
-      <Block />
-    );
-  }
+  // function KlarBlock({heading, subHeading, image, team, text}) {
+  //   return 'test'(
+  //     <Block />
+  //   );
+  // }
 
-  function Block() {
-    return (
-      <div className="container">
+  // function Block() {
+  //   return (
+  //     <div className="container">
         
-      </div>
-    );
-  }
+  //     </div>
+  //   );
+  // }
 </script>
 
 <script>
