--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,4 @@
-</script type="text/jsx">
+</script type="text/babel">
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
