--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,4 @@
-</script type="text/babel">
+<script type="text/jsx">
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
@@ -178,4 +178,4 @@ const data = {
     }
 };
 ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".footer"));
-<script>
+</script>
