--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -177,5 +177,5 @@ const data = {
         }
     }
 };
-ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".footer"));
+ReactDOM.render(<KlarBlock {...data} />, document.querySelector("#footer"));
 </script>
