--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,5 @@
 Gabriel Testar :)
-<script type="text/jsx">
+<script>
 function KlarBlock({heading, subHeading, image, team, text}) {
   return (
     <Block>
@@ -178,5 +178,5 @@ const data = {
         }
     }
 };
-ReactDOM.render(<KlarBlock {...data} />, document.querySelector("#footer"));
+ReactDOM.render(<KlarBlock {...data} />, document.querySelector(".team2"));
 </script>
