--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -178,5 +178,5 @@ const data = {
 
 
 
-ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), document.querySelector(".team2"));
+ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), document.querySelector("#footer"));
 </script>
