--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,5 @@
 Gabriel Testar :)
-<script>
+<script type="text/babel">
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
     React.createElement(Block, null, /*#__PURE__*/
