--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,6 @@
 Gabriel Testar :)
 <script type="text/javascript">
+setTimeout(function () {
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
     React.createElement(Block, null, /*#__PURE__*/
@@ -179,4 +180,5 @@ const data = {
 
 
 ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), document.querySelector("#footer"));
+    }, 4000);
 </script>
