--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,3 +1,7 @@
+<div>Jag heter Gabriel Lantz och jag är glad!</div>
+<div>Jag heter Gabriel Lantz och jag är glad!</div>
+<div>Jag heter Gabriel Lantz och jag är glad!</div>
+<div>Jag heter Gabriel Lantz och jag är glad!</div>
 <script>
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
