--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -2,7 +2,7 @@
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
-<script>
+<script type="text/babel">
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
     React.createElement(Block, null, /*#__PURE__*/
