--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,8 +1,14 @@
+<!-- Team 2 Section -->
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
 <div>Jag heter Gabriel Lantz och jag är glad!</div>
-<script type="text/babel">
+<style>
+  .foasd {
+    color: red;
+  }
+</style>
+<script>
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
     React.createElement(Block, null, /*#__PURE__*/
