--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -9,6 +9,10 @@
   }
 </style>
 <script>
+function test() {
+  console.log('Testar från Agency');
+}
+
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
     React.createElement(Block, null, /*#__PURE__*/
