--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,89 +1,2 @@
-<!-- Team 2 Section -->
-<div>Jag heter Gabriel Lantz och jag är glad!</div>
-<div>Jag heter Gabriel Lantz och jag är glad!</div>
-<div>Jag heter Gabriel Lantz och jag är glad!</div>
-<div>Jag heter Gabriel Lantz och jag är glad!</div>
-<style>
-  .foasd {
-    color: red;
-  }
-</style>
-<script>
-function test() {
-  console.log('Testar från Agency');
-}
-
-function KlarBlock({ heading, subHeading, image, team, text }) {
-  return /*#__PURE__*/(
-    React.createElement(Block, null, /*#__PURE__*/
-    React.createElement(Intro, { heading: heading, subHeading: subHeading }), /*#__PURE__*/
-    React.createElement(Members, { team: team, foo: "dfsadf" }), /*#__PURE__*/
-    React.createElement(Description, { text: text })));
-
-
-}
-function Block({ children }) {
-  return /*#__PURE__*/(
-    React.createElement("div", { className: "container" },
-    children));
-
-
-}
-function Intro({ heading, subHeading }) {
-  return /*#__PURE__*/(
-    React.createElement("div", { className: "row" }, /*#__PURE__*/
-    React.createElement("div", { className: "col-lg-12 text-center" }, /*#__PURE__*/
-    React.createElement("h2", { className: "section-heading" }, heading), /*#__PURE__*/
-    React.createElement("h3", { className: "section-subheading text-muted" }, subHeading))));
-
-
-
-}
-function Members({ team }) {
-  return /*#__PURE__*/(
-    React.createElement("div", { className: "row clearfix", "data-field-array": "team" },
-    team.map((member, i) => {
-      return /*#__PURE__*/React.createElement(TeamMember, {
-        image: member.image,
-        name: member.heading,
-        position: member.text,
-        key: i });
-
-    })));
-
-
-
-}
-function TeamMember({ name, position, image, socialLinks }) {
-  return /*#__PURE__*/(
-    React.createElement("div", { className: "col-sm-4" }, /*#__PURE__*/
-    React.createElement("div", { className: "team-member", "data-field-array-item": "" }, /*#__PURE__*/
-    React.createElement("img", { src: image, className: "img-responsive img-circle", "no-data-placement": "top", "no-data-inset": "true", alt: name }), /*#__PURE__*/
-    React.createElement("h4", null, name), /*#__PURE__*/
-    React.createElement("p", null, position), /*#__PURE__*/
-    React.createElement("ul", { className: "list-inline social-buttons" }, /*#__PURE__*/
-    React.createElement("li", null, /*#__PURE__*/
-    React.createElement("a", { href: "#youraccount" }, /*#__PURE__*/React.createElement("i", { className: "fa fa-twitter" }))), /*#__PURE__*/
-
-    React.createElement("li", null, /*#__PURE__*/
-    React.createElement("a", { href: "#youraccount" }, /*#__PURE__*/React.createElement("i", { className: "fa fa-facebook" }))), /*#__PURE__*/
-
-
-    React.createElement("li", null, /*#__PURE__*/
-    React.createElement("a", { href: "#youraccount" }, /*#__PURE__*/React.createElement("i", { className: "fa fa-instagram" })))))));
-
-
-
-
-
-}
-function Description({ text }) {
-  return /*#__PURE__*/(
-    React.createElement("div", { className: "row" }, /*#__PURE__*/
-    React.createElement("div", { className: "col-lg-8 col-lg-offset-2 text-center" }, /*#__PURE__*/
-    React.createElement("p", { className: "large" }, text))));
-
-
-
-}
-</script>
+<div>Gabriel är glad!</div>
+<script onload="(() => doIt('footer'))" src="http://localhost:14000/assets/js/blocks-react/team.js"></script>
