--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,2 +1,7 @@
-<div>Gabriel är glad!</div>
-<script onload="(() => doIt('footer'))" src="http://localhost:14000/assets/js/blocks-react/team.js"></script>
+<div>Gabriel är glad nu också!</div>
+<script>
+  let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
+  myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
+  myScript.onload = function () {setTimeout(() => doIt('team2'), 300)};
+  parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
+</script>
