--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,5 @@
-<div>Gabriel är glad nu också!</div>
+<div>Gabriel är glad nu också yay!</div>
+<section id="{{block_id}}" class="{{template_id}} block">
 <script>
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
   myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
