--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -3,6 +3,6 @@
 <script>
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
   myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
-  myScript.onload = function () {setTimeout(() => doIt('team2'), 300)};
-  parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild({{block_id}});
+  myScript.onload = function () {setTimeout(() => doIt('{{block_id}}'), 300)};
+  parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
 </script>
