--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,8 +1,9 @@
 <div>Gabriel är glad nu också yay!</div>
 <section id="{{block_id}}" class="{{template_id}} block">
 <script>
+  const blockId = '{{block_id}}';
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
   myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
-  myScript.onload = function () {setTimeout(() => doIt("{block_id}"), 300)};
+  myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
   parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
 </script>
