--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -3,7 +3,7 @@
 <script>
   const blockId = '{{block_id}}';
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
-  myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
+  myScript.setAttribute("src", "https://raw.githubusercontent.com/klar-templates/agency/master/templates/blocks/team2.html");
   myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
   parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
 </script>
