--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,5 @@
 <div>Gabriel är glad nu också yay!</div>
-<section id="{{block_id}}" class="{{template_id}} block">
+<section id="{{block_id}}" class="team2 block">
 <script>
   const blockId = '{{block_id}}';
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
