--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,4 @@
-<div>Gabriel är glad nu också yay!</div>
-<section id="{{block_id}}" class="team2 block">
+<section id="team2-123" class="team2 block">
 <script>
   const blockId = '{{block_id}}';
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
