--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,4 @@
-<section id="{{block_id}}" class="{{template_id}} block"></section>
+<section id="team2-123" class="team2 block"></section>
 <script>
   const blockId = '{{block_id}}';
   let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
