--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,8 +1,10 @@
 <section id="team2-123" class="team2 block"></section>
-<script>
-  const blockId = '{{block_id}}';
-  let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
-  myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
-  myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
-  parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
-</script>
+<div>
+  <script>
+    const blockId = '{{block_id}}';
+    let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
+    myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
+    myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
+    parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
+  </script>
+</div>
