--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,4 @@
-<section id="team2-123" class="team2 block"></section>
+<section id="team2-123" class="team2 block">Snart kommer innehållet!</section>
 <div>
   <script>
     const blockId = '{{block_id}}';
