--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,7 +1,7 @@
 <section id="team2-123" class="team2 block">Snart kommer innehållet!</section>
 <div>
-  <script>
-    const blockId = '{{block_id}}';
+  <script type="text/javascript">
+    const blockId = 'team2';
     let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
     myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
     myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
