--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,4 +1,4 @@
-<section id="team2-123" class="team2 block">Snart kommer innehållet!</section>
+<section id="{{block_id}}" class="{{template_id}} block">Snart kommer innehållet!</section>
 <div>
   <script type="text/javascript">
     const blockId = 'team2';
