--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -8,3 +8,6 @@
     parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
   </script>
 </div>
+<div>
+  fdasd fasdf df asdf asdf asdf asdf as
+</div>
