--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,11 +1,11 @@
 <section id="{{block_id}}" class="{{template_id}} block">Snart kommer innehållet!</section>
 <div>
   <script type="text/javascript">
-    const blockId = '{{block_id}}';
-    let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
-    myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
-    myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
-    parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
+    // const blockId = '{{block_id}}';
+    // let myScript = parent.frames['clientframe'].contentWindow.document.createElement("script");
+    // myScript.setAttribute("src", "http://localhost:14000/assets/js/blocks-react/team.js");
+    // myScript.onload = function () {setTimeout(() => doIt(blockId), 300)};
+    // parent.frames['clientframe'].contentWindow.document.getElementsByTagName('head')[0].appendChild(myScript);
   </script>
 </div>
 <div>
