--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,5 +1,6 @@
 <!-- Team2 Section -->
-<section id="{{block_id}}" class="{{template_id}} block">Snart kommer innehållet!</section>
+<section id="{{block_id}}" class="{{template_id}} block">
+  Snart kommer innehållet!
 <div>
   <script type="text/javascript">
     const blockId = '{{block_id}}';
@@ -12,61 +13,4 @@
 <div>
   fdasd fasdf df asdf asdf asdf asdf as
 </div>
-
-
-<!-- Theme CSS -->
-<style>
-  .service-heading {
-    margin: 15px 0;
-    text-transform: none;
-  }
-  </style>
-  
-  <!-- Style CSS -->
-  <style>
-  /* Block */
-  #{{block_id}} .text-primary { color: {{ block.style.block.icon_bg_color }}; }
-  #{{block_id}} .fa-inverse { color: {{ block.style.block.icon_color }}; }
-  
-  /* Colors */
-  #{{block_id}} {
-    background-color: {{ block.style.colors.bg_color }};
-    color: {{ block.style.colors.text_color }};
-  }
-  #{{block_id}} h1, #{{block_id}} h2, #{{block_id}} h3, #{{block_id}} h4, #{{block_id}} h5, #{{block_id}} h6 {
-    color: {{ block.style.colors.title_text_color }};
-  }
-  #{{block_id}} h3.section-subheading {
-    color: {{ block.style.colors.subtitle_text_color }};
-  }
-  #{{block_id}} p {
-    color: {{ block.style.colors.text_color }};
-  }
-  #{{block_id}} a {
-    color: {{ block.style.colors.link_text_color }};
-  }
-  #{{block_id}} a:hover,
-  #{{block_id}} a:focus,
-  #{{block_id}} a:active {
-    color: {{ block.style.colors.link_hover_text_color }};
-  }
-  #{{block_id}} .btn-primary,
-  #{{block_id}} .btn-primary:hover,
-  #{{block_id}} .btn-primary:focus,
-  #{{block_id}} .btn-primary:active {
-    background-color: {{ block.style.colors.primary_color }};
-    border-color: {{ block.style.colors.primary_color }};
-  }
-  #{{block_id}} .text-primary {
-    color: {{ block.style.colors.primary_color }};
-  }
-  #{{block_id}} ::selection {
-    color: {{ block.style.colors.selection_text_color }};
-    background: {{ block.style.colors.selection_bg_color }};
-  }
-  /* Colors */
-  #{{block_id}} {
-    padding-top: {{ block.style.layout.padding_top }}px;
-    padding-bottom: {{ block.style.layout.padding_bottom }}px;
-  }
-  </style>
+</section>
