--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -176,5 +176,5 @@ const data = {
       "padding_bottom": "150" } } };
 
 
-parent.frames['clientframe'].contentWindow.document.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), document.querySelector("#footer"));
+parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), document.querySelector("#footer"));
 </script>
