--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -1,3 +1,4 @@
+<section id="team2-123" class="team2 block"></section>
 <script>
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
@@ -73,5 +74,5 @@ function Description({ text }) {
 
 }
 
-parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, {}), document.querySelector("#footer"));
+parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, {}), document.querySelector(".team2"));
 </script>
