--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -74,5 +74,5 @@ function Description({ text }) {
 
 }
 
-parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, {}), document.querySelector(".team2"));
+parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, {}), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
 </script>
