--- a/templates/blocks/team2.html
+++ b/templates/blocks/team2.html
@@ -35,11 +35,7 @@ function Members({ team }) {
         name: member.heading,
         position: member.text,
         key: i });
-
     })));
-
-
-
 }
 function TeamMember({ name, position, image, socialLinks }) {
   return /*#__PURE__*/(
@@ -74,5 +70,108 @@ function Description({ text }) {
 
 }
 
-parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, {}), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
+const data = {
+  "heading": "Our Amazing Team",
+  "sub_heading": "Lorem ipsum dolor sit amet consectetur.",
+  "team": [
+  {
+    "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/team/1.jpg",
+    "heading": "Kay Garland",
+    "text": "Lead Designer",
+    "social_links": [
+    {
+      "title": "Twitter",
+      "icon": "twitter",
+      "link": "#youraccount" },
+
+    {
+      "title": "Facebook",
+      "icon": "facebook",
+      "link": "#youraccount" },
+
+    {
+      "title": "Instagram",
+      "icon": "instagram",
+      "link": "#youraccount" }] },
+
+
+
+  {
+    "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/team/2.jpg",
+    "heading": "Larry Parker",
+    "text": "Lead Marketer",
+    "social_links": [
+    {
+      "title": "Twitter",
+      "icon": "twitter",
+      "link": "#youraccount" },
+
+    {
+      "title": "Facebook",
+      "icon": "facebook",
+      "link": "#youraccount" },
+
+    {
+      "title": "Instagram",
+      "icon": "instagram",
+      "link": "#youraccount" }] },
+
+
+
+  {
+    "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/team/3.jpg",
+    "heading": "Diana Pertersen",
+    "text": "Lead Developer",
+    "social_links": [
+    {
+      "title": "Twitter",
+      "icon": "twitter",
+      "link": "#youraccount" },
+
+    {
+      "title": "Facebook",
+      "icon": "facebook",
+      "link": "#youraccount" },
+
+    {
+      "title": "Instagram",
+      "icon": "instagram",
+      "link": "#youraccount" }] }],
+
+
+
+
+  "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.",
+  "style": {
+    "block": {
+      "bg_color": "#eeeeee",
+      "padding_top": 150,
+      "padding_bottom": 150 } },
+
+
+  "block_id": "team-1495374874481",
+  "template_id": "team",
+  "theme": {
+    "colors": {
+      "bg_color": "#ffffff",
+      "title_text_color": "#333333",
+      "subtitle_text_color": "#777777",
+      "text_color": "#777777",
+      "link_color": "#fed136",
+      "link_hover_color": "#fec503",
+      "primary_color": "#fed136",
+      "selection_text_color": "#ffffff",
+      "selection_bg_color": "#fed136" },
+
+    "typography": {
+      "title_font_family": "Montserrat",
+      "subtitle_font_family": "Droid Serif",
+      "text_font_family": "Roboto Slab",
+      "type_base_size": 14 },
+
+    "block": {
+      "padding_top": "150",
+      "padding_bottom": "150" } } };
+
+parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
 </script>
