--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -173,5 +173,5 @@ const data = {
       "padding_top": "150",
       "padding_bottom": "150" } } };
 
-parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
+setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2")), 300)
 </script>
