--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -173,8 +173,8 @@ const data = {
       "padding_top": "150",
       "padding_bottom": "150" } } };
 
-      console.log(parent.frames['clientframe'].contentWindow.ReactDOM)
-if (!parent.frames['clientframe'].contentWindow.ReactDOM) {
+      // console.log(parent.frames['clientframe'].contentWindow.ReactDOM)
+if (parent.frames['clientframe'].contentWindow.ReactDOM === undefined) {
   setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2")), 0);
 } else {
   parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
