--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -1,4 +1,4 @@
-<section id="{{block_id}}" class="{{template_id}} block">
+<section id="team2-123" class="team2 block"></section>
 <script>
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
@@ -173,9 +173,11 @@ const data = {
       "padding_top": "150",
       "padding_bottom": "150" } } };
 
+
+console.log('{{block_id}}')
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
-  setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".{{block_id}}")), 300);
+  setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2")), 300);
 } else {
-  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".{{block_id}}"));
+  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(".team2"));
 }
 </script>
