--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -2,7 +2,7 @@
 
 </section>
 <script>
-const blockId = '.{{block_id}}';
+const blockId = '".{{block_id}}"';
 
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
