--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -1,8 +1,6 @@
-<section id="{{block_id}}" class="{{template_id}} block">
+<section id="{{block_id}}" class="{{template_id}} block"></section>
 
-</section>
 <script>
-const blockId = '#{{block_id}}';
 
 function KlarBlock({ heading, subHeading, image, team, text }) {
   return /*#__PURE__*/(
@@ -177,11 +175,10 @@ const data = {
       "padding_top": "150",
       "padding_bottom": "150" } } };
 
-
 console.log(blockId)
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
-  setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(blockId)), 300);
+  setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
 } else {
-  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector(blockId));
+  parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}'));
 }
 </script>
