--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -175,7 +175,7 @@ const data = {
       "padding_top": "150",
       "padding_bottom": "150" } } };
 
-console.log(blockId)
+console.log('#{{block_id}}')
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
   setTimeout(()=>parent.frames['clientframe'].contentWindow.ReactDOM.render( /*#__PURE__*/React.createElement(KlarBlock, data), parent.frames['clientframe'].contentWindow.document.querySelector('#{{block_id}}')), 300);
 } else {
