--- a/templates/blocks/react.html
+++ b/templates/blocks/react.html
@@ -74,6 +74,7 @@ function Description({ text }) {
 
 let fooCurrentPage;
 let gnuThisBlockData;
+console.log(window.page)
 
 console.log('#{{block_id}}')
 if (typeof parent.frames['clientframe'].contentWindow.ReactDOM === 'undefined') {
