--- a/templates/page.html
+++ b/templates/page.html
@@ -284,6 +284,7 @@
 
 <script id="react-code"></script>
 
+<!-- Klarscript executes when page is loaded. -->
 <script>
   function klarScript() {
     // Add 'klar-modal-open' CSS class, when modal is opened
