--- a/templates/page.html
+++ b/templates/page.html
@@ -230,7 +230,7 @@
     a:hover,
     a:focus,
     a:active {
-      color: {{ theme.colors.link_hover_text_color }};
+      color: {{ theme.colors.link_text_hover_color }};
     }
     /* Global */
     @media (min-width: 768px) {
