--- a/templates/page.html
+++ b/templates/page.html
@@ -226,9 +226,9 @@
     a {
       color: {{ theme.colors.link_text_color }};
     }
-    a:hover,
-    a:focus,
-    a:active {
+    body a:hover,
+    body a:focus,
+    body a:active {
       color: {{ theme.colors.link_text_hover_color }};
     }
     /* Global */
